--- a/backend/core/templates/core/upload_equipos_preview.html
+++ b/backend/core/templates/core/upload_equipos_preview.html
@@ -28,6 +28,29 @@
     .breadcrumb-item.active {
         color: #999;
     }
+
+    /* Table Styles */
+    .table thead th {
+        border-right: 1px solid #d1d5db;
+        text-align: center;
+    }
+
+    .table thead th:last-child {
+        border-right: none;
+    }
+
+    .table tbody td {
+        border-right: 1px solid #e5e7eb;
+        text-align: center;
+    }
+
+    .table tbody td:last-child {
+        border-right: none;
+    }
+
+    .table tbody td:first-child {
+        text-align: left;
+    }
 </style>
 
 <div class="container-fluid mt-4">
