style: Center sucursal names in table

--- a/backend/core/templates/core/sucursales.html
+++ b/backend/core/templates/core/sucursales.html
@@ -293,7 +293,7 @@
         }
 
         table tbody td:first-child {
-            text-align: left;
+            text-align: center;
         }
 
         .sucursal-badge {
